<resources>
    <string name="app_name">Atnachta</string>
    <string name="hello_atnachta">Hello Atnachta!</string>
    <string name="loginButton">כניסה</string>
    <string name="loginEmailLabel">כתובת אימייל</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginPasswordLabel">סיסמא</string>
    <string name="loginUsernameHint">שם משתמש</string>
    <string name="loginPasswordHint">סיסמא</string>
    <string name="mainScreenSearchLabel">חיפוש</string>
    <string name="mainScreenSearchButtonText">חפש/י</string>
    <string name="addNewProfileButtonText">+  הוסף פרופיל חדש</string>
    <string name="mainScreenFirstNameLabel">שם פרטי</string>
    <string name="mainScreenLastNameLabel">שם משפחה</string>
    <string name="mainScreenIDLabel">תעודת זהות</string>
    <string name="ReferenceDetails">פרטי הפניה</string>
    <string name="newReferenceRefererName">שם המפנה</string>
    <string name="newReferenceReceiverName">שם מקבל ההפניה</string>
    <string name="newReferenceReason">סיבת ההפניה</string>
    <string name="newProfileFirstName">שם פרטי</string>
    <string name="newProfileLastName">שם משפחה</string>
    <string name="personalDetails">פרטים אישיים</string>
    <string name="date">תאריך</string>
    <string name="time">שעה</string>
    <string name="refererDetails">פרטי המפנה</string>
    <string name="name">שם</string>
    <string name="job">תפקיד</string>
    <string name="phone">טלפון</string>
    <string name="continueButtonText">המשך</string>
    <string name="girl_profile">פרופיל נערה</string>
    <string name="private_data">פרטים אישיים</string>
    <string name="full_name">שם מלא:</string>
    <string name="edit">ערוך</string>
    <string name="firstName">שם פרטי</string>
    <string name="familyName">שם משפחה</string>
    <string name="dateOfBirth">תאריך לידה</string>
    <string name="ParentsDetails">פרטי הורים</string>
    <string name="mothersName">שם האמא</string>
    <string name="fathersName">שם האבא</string>
    <string name="address">כתובת</string>
    <string name="basicDetails">פרטים בסיסיים</string>
    <string name="newReferenceFragmentTitle">פרטי הפניה</string>
    <string name="mainScreenFragmentTitle">ברוכים הבאים</string>
    <string name="loginFragmentTitle">כניסה</string>
    <string name="loginImageDescription">Logo</string>
    <string name="motherDetails">פרטי אמא</string>
    <string name="fullName">שם מלא</string>
    <string name="referenceReason">סיבת ההפניה</string>
    <string name="searchHint">הכנס/י שם או תעודת זהות…</string>
    <string name="age">גיל</string>
    <string name="recycleSearchSearchButton">חיפוש</string>
    <string name="emptyEmailError">נא למלא כתובת אימייל</string>
    <string name="emptyPasswordError">נא להזין סיסמא</string>
    <string name="invalidLoginDetailsMsg">הכניסה נכשלה: אימייל או סיסמא לא חוקיים</string>
    <string name="resetSuperUserPassoword">איפוס סיסמא - חשבון מנהלים</string>
    <string name="passordResetMsg">נשלח אימייל לאיפוס סיסמא</string>
    <string name="devButtonText">dev sign in</string>
    <string name="welcomeLabel">ברוכים הבאים לאפליקציית אתנחתא!</string>
    <string name="passwordChangeButtonText">שליחת מייל</string>
    <string name="passwordResetTitleText">אתחול סיסמת מדריכים</string>
    <string name="passwordChangeText1">נא להזין סיסמא חדשה…</string>
    <string name="passwordChangeText2">נא להזין את הסיסמא בשנית…</string>
    <string name="passwordResetButtonText">אישור</string>
    <string name="passwordResetFragmentTitle">אתחול סיסמת מדריכים</string>
    <string name="unmatchedPasswordsError">שגיאה: אין התאמה בין הסיסמאות</string>
    <string name="shortPasswordError">על הסיסמא להכיל 6 תווים לפחות</string>
    <string name="loginForPasswordResetTitleText">נא להזין פרטי חשבון מדריכים:</string>
    <string name="forgorInstructorPassword">שכחת את סיסמת המדריכים?</string>
    <string name="writeError">error while writing file</string>
    <string name="writeSuccess">writing to storage was successful</string>
    <string name="successfulPasswordReset">סיסמא אותחלה בהצלחה!</string>
    <string name="backToLoginButtonText">חזרה למסך כניסה</string>
    <string name="generalPasswordResetError">שגיאה במהלך אתחול סיסמא</string>
    <string name="loginForPasswordResetFragmentTitle">כניסה למשתמש מדריכים</string>
    <string name="dateChooserText">נא לבחור תאריך…</string>
    <string name="timeChooserText">נא לבחור שעה…</string>
    <string name="dateAndTime">תאריך ושעה</string>
    <string name="exportMenuOption">ייצוא למייל</string>
    <string name="filePickerError">לא נבחר קובץ</string>
    <string name="fileUploadError">העלת קובץ נכשלה</string>
    <string name="fileUploadSuccess">העלת קובץ בוצעה בהצלחה</string>
    <string name="getURLFailure">שגיאה - לא ניתן להשיג קישור לקובץ</string>
    <string name="downloadFromStorageError">שגיאה - הורדת  הקובץ נכשלה</string>
    <string name="fileDownloadDescription">file is downloading…</string>
    <string name="downloadCompleted">הסתיימה הורדת הקובץ</string>
    <string name="loginErrorUnknown">התחברות נכשלה: יש לנסות שנית</string>
    <string name="loginErrorInvalidCredentials">התחברות נכשלה: שם משתמש או סיסמא לא חוקיים</string>
    <string name="loginErrorInvalidUser">התחברות נכשלה: המשתמש לא קיים במערכת</string>
    <string name="loginErrorNetwork">התחברות נכשלה: נא לבדוק חיבור לרשת ולנסות שנית</string>
    <string name="profileCreationError">שגיאה ביצירת פרופיל: נא לנסות שנית</string>
    <string name="emptyNameError">נא להזין שם פרטי</string>
    <string name="RecycleSearchFragmentTitle">חיפוש</string>
    <string name="newProfileTitle">פרופיל חדש</string>
    <string name="newReferenceTitle">הפניה חדשה</string>
    <string name="passwordChangeLabel">שינוי סיסמת מדריכים</string>
    <string name="passwordResetDescription">לחצ/י פה לשליחת מייל לאיפוס סיסמת חשבון המדריכים:</string>
    <string name="socialWorkerIntake">אינטייק עו\"ס:</string>
    <string name="courtOrder">צו בית משפט:</string>
    <string name="parantApproval">אישור הורים:</string>
    <string name="medicalIntake">אינטייק רפואי:</string>
    <string name="referenceFragmentTitle">פרטי הפניה</string>
    <string name="profileFragmentTitle">פרטי פרופיל</string>
    <string name="upload">העלה</string>
    <string name="status_dialog_title">נא לבחור סטטוס הפניה:</string>
    <string name="cancel">ביטול</string>
    <string name="accept">אישור</string>
    <string name="leaving_dialog_title">נא למלא פרטי עזיבה</string>
    <string name="cancel_leave_dialog_title">האם אתם בטוחים?</string>
    <string name="cancel_leave_dialog_body">ביצוע פעולה זו תמחק את כל פרטי העזיבה</string>
    <string name="close">סגור</string>
    <string name="please_choose">נא לבחור…</string>
    <string name="download_file_dialog_title">הורדה</string>
    <string name="download_file_dialog_body">לחיצה על אישור תוריד למכשיר את הקובץ %1$s</string>
    <string name="delete_file_dialog_body">לחיצה על אישור תמחק את הקובץ %1$s</string>
    <string name="download_file">הורד קובץ</string>
    <string name="delete_file">מחק קובץ</string>
    <string name="delete_file_dialog_title">אתם בטוחים?</string>
    <string name="fileDeleteSuccess">מחיקת הקובץ בוצעה בהצלחה</string>
    <string name="deleteFileError">שגיאה - מחיקת הקובץ נכשלה</string>
    <string name="file_overwrite_dialog_title">אתם בטוחים?</string>
    <string name="file_overwrite_dialog_body">העלאה של קובץ חדש תמחק את הקובץ הנוכחי</string>
    <string name="father">אבא</string>
    <string name="father_name">שם</string>
    <string name="family_status">מצב משפחתי</string>
    <string name="mother">אמא</string>
    <string name="fatherDetails">פרטי אבא</string>
    <string name="has_other_guardian">האם יש אפוטרופוס נוסף?</string>
    <string name="guardianDetails">פרטי אפוטרופוס</string>
    <string-array name="reference_status_array">
        <item>התקבלה ולא הגיעה</item>
        <item>התקבלה והגיעה</item>
        <item>לא התקבלה</item>
        <item>עזבה</item>
    </string-array>
    <string-array name="religious_status_array">
        <item>נא לבחור…</item>
        <item>חילונית</item>
        <item>מסורתית</item>
        <item>דתיה</item>
        <item>חרדית</item>
        <item>מוסלמית</item>
        <item>נוצריה</item>
        <item>אחר</item>
    </string-array>
    <string-array name="family_status_array">
        <item>נא לבחור…</item>
        <item>נשוי\\אה</item>
        <item>גרוש\\ה</item>
        <item>פרוד\\ה</item>
        <item>נשוי\\אה בשנית</item>
    </string-array>
</resources>