<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/progressBarElevation"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="32dp"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintDimensionRatio=""
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSearch"
            style="@style/FragmentTitle"
            android:text="@string/mainScreenSearchLabel"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintRight_toLeftOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/searchHint"
            app:errorEnabled="true"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSearch">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/initialSearchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mainScreenSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainScreenSearchButtonText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/dividerColor"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainScreenSearchButton" />

        <Button
            android:id="@+id/instructorPasswordChangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_baseline_mail_outline_24"
            android:text="@string/passwordChangeButtonText"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPasswordResetDescription" />

        <ImageView
            android:id="@+id/imageViewLock"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_baseline_lock_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/textViewPasswordResetTitle"
            style="@style/FragmentTitle"
            android:text="@string/passwordChangeLabel"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewLock"
            app:layout_constraintRight_toLeftOf="@+id/imageViewLock"
            app:layout_constraintTop_toTopOf="@+id/imageViewLock" />

        <TextView
            android:id="@+id/textViewPasswordResetDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/passwordResetDescription"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLock" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
